convert additional Arrays.asList to List.of